[tool.poetry]
name = "commanderbot"
version = "0.2.0"
description = "Command-line interface for running an instance of CommanderBot."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/CommanderBot-Dev/commanderbot"
homepage = "https://github.com/CommanderBot-Dev/commanderbot"
keywords = ['discord', 'bot']

[tool.poetry.dependencies]
python = "^3.8"
commanderbot-lib = "^0.1.0"
    colorama = {version = "^0.4.3", optional = true}
    colorlog = {version = "^4.2.1", optional = true}
    pyyaml = {version = "^5.3.1", optional = true}
commanderbot-ext = {version = "^0.2.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.extras]
"commanderbot-lib[log-colors]" = ["colorama", "colorlog"]
"commanderbot-lib[yaml]" = ["pyyaml"]
commanderbot-ext = ["commanderbot-ext"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
