[tool.poetry]
name = "commanderbot"
version = "0.7.0"
description = "A simple wrapper and CLI bootstrap for discord.py bots."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/CommanderBot-Dev/commanderbot-core"
homepage = "https://github.com/CommanderBot-Dev/commanderbot-core"
keywords = ['discord', 'bot']

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.1"
colorama = {version = "^0.4.3", optional = true}
colorlog = {version = "^4.2.1", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.5b0"
isort = "^5.8.0"
rope = "^0.19.0"

[tool.poetry.extras]
colors = ["colorama", "colorlog"]

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
