[tool.poetry]
name = "commanderbot"
version = "0.9.0"
description = "A simple wrapper and CLI bootstrap for discord.py bots."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/CommanderBot-Dev/commanderbot-core"
homepage = "https://github.com/CommanderBot-Dev/commanderbot-core"
keywords = ['discord', 'bot']

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.1"
colorama = "^0.4.3"
colorlog = "^4.2.1"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
isort = "^5.8.0"
rope = "^0.19.0"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
